--- a/domain/index.html
+++ b/domain/index.html
@@ -58,11 +58,13 @@
 										<li>DAN.com accepts global payments & has a passionate support team</li>
 										<li>Domain delivery time is 12 - 48 hours after payment confirmation</li>
 							</ul>
-								<a class="genric-btn link radius" id="cta-link2" href="#">
+						</div>
+					</div>
+
+					<div class="col-12 text-center">
+								<a class="genric-btn link radius text-center" id="cta-link2" href="#">
 									<span id="cta-text2">View on DAN.com</span>
 								</a>
-
-						</div>
 					</div>
 
 				</div>
